--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@babel/preset-react": "^7.13.13",
         "autoprefixer": "^10.3.7",
         "axios": "^0.21",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "^5.1.3",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -29,6 +29,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.10.1",
         "@inertiajs/inertia-react": "^0.7.1",
+        "@popperjs/core": "^2.10.2",
         "postcss-import": "^14.0.2",
         "react-helmet": "^6.1.0",
         "simple-react-lightbox": "^3.6.9-0",
